--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-label": "2.1.8",
     "@radix-ui/react-slot": "1.2.4",
     "@rainbow-me/rainbowkit": "2.2.10",
     "@tanstack/react-query": "5.90.20",
