--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-label": "2.1.8",
     "@radix-ui/react-slot": "1.2.4",
     "@rainbow-me/rainbowkit": "2.2.10",
+    "@react-three/drei": "10.7.7",
+    "@react-three/fiber": "9.5.0",
     "@tanstack/react-query": "5.90.20",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
@@ -22,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "3.4.0",
+    "three": "0.182.0",
     "viem": "2.45.1",
     "wagmi": "2.19.5"
   },
