--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,8 +22,10 @@
     "clsx": "2.1.1",
     "lucide-react": "0.563.0",
     "next": "14.2.35",
+    "qrcode": "1.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "2.0.18",
     "tailwind-merge": "3.4.0",
     "three": "0.182.0",
     "viem": "2.45.1",
